# thumbnailViewer

./: .gitignore  readme.md
doc/: design.pptx
src/: CMakeLists.txt
src/breadcrumbsaddressbar/: CMakeLists.txt  breadcrumbsaddressbar.cpp  breadcrumbslayout.h  filenamemodel.cpp  filenamemodel.h  menulistview.cpp  menulistview.h  styleproxy.cpp  styleproxy.h
src/breadcrumbsaddressbar/assets/: styles.qss
src/main/: CMakeLists.txt  MFUtility.h  clipinfo.cpp  clipinfo.h  clipinfodelegate.cpp  clipinfodelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  output_thumbnail.cpp  output_thumbnail.h
test/01_qlistwidget_thumbnail/: CMakeLists.txt
test/01_qlistwidget_thumbnail/main/: CMakeLists.txt  clipinfo.h  clipinfodelegate.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/02_video_thumbnail_mf/: VideoThumbnail.sln
test/02_video_thumbnail_mf/src/: Thumbnail.cpp  VideoThumbnail.vcxproj
test/03_create_video_thumbnail/01_output_video_thumbnail/: CMakeLists.txt
test/03_create_video_thumbnail/01_output_video_thumbnail/main/: CMakeLists.txt  main.cpp  output_thumbnail.cpp  output_thumbnail.h  sprite.cpp  sprite.h
test/03_create_video_thumbnail/02_output_video_thumbnailWithQImage/: CMakeLists.txt
test/03_create_video_thumbnail/02_output_video_thumbnailWithQImage/main/: CMakeLists.txt  dxhelper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  output_thumbnail.cpp  output_thumbnail.h  sprite.h
test/04_star_delegate/: CMakeLists.txt
test/04_star_delegate/main/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stardelegate.cpp  stardelegate.h  stareditor.cpp  stareditor.h  starrating.cpp  starrating.h
test/05_breadcrumbsaddressbar/: CMakeLists.txt
test/05_breadcrumbsaddressbar/main/: CMakeLists.txt  breadcrumbsaddressbar.cpp  breadcrumbsaddressbar.h  breadcrumbslayout.cpp  breadcrumbslayout.h  filenamemodel.cpp  filenamemodel.h  mainwindow.qrc  mainwindow.ui  menulistview.cpp  menulistview.h  styleproxy.cpp  styleproxy.h
